--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "basic-tree",
-  "version": "1.2.3",
-  "description": "A one-dimensional immutable tree structure that can generate and traverse an n-branching tree",
+  "name": "battleship",
+  "version": "0.0.1",
+  "description": "Battleship",
   "main": "dist/bundle.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stephen-standridge/basic-tree"
+    "url": "https://github.com/stephen-standridge/battleship"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./test/test_helper.js  --recursive",
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./test/testHelper.js  --recursive",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Stephen Standridge <Stephen@formisfunction.io> (www.formisfunction.io)",
   "license": "ISC",
   "dependencies": {
-    "immutable": "^3.7.5"
+    "lodash": "^4.13.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.11.1",
     "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4",
+    "sinon": "^1.17.4",
     "webpack": "^1.12.9"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   }
 }
